--- a/templates/night/stamp3.html
+++ b/templates/night/stamp3.html
@@ -4,20 +4,25 @@
         <meta charset="utf-8">
         <title>湯桶温泉</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/night3_9.css') }}">
     </head>
     <body>
         <header>
-            <div>
-                <a href="../">ホーム</a>
-                <a href="../stamp_rally_night">スタンプ</a>
+            <div class="header">
+                <div class="link_flex">
+                    <p><a href="../">ホーム</a></p>
+                    <p><a href="../stamp_rally_night">スタンプ</a></p>
+                </div>
+                <h2>押しまっし金沢</h2>
             </div>
         </header>
-        <h1>湯桶温泉</h1>
-        <p>-------------</p>
-        <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
-        <button id="stop-camera-btn">カメラ停止</button>
-        <video id="video" style="display:none;"></video>
-        <canvas id="canvas" style="display:none;"></canvas>
+        <div class="center">
+            <h1>湯桶温泉</h1>
+            <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
+            <button id="stop-camera-btn">カメラ停止</button>
+            <video id="video" style="display:none;"></video>
+            <canvas id="canvas" style="display:none;"></canvas>
+        </div>
         <script>
             let videoStream;
     
@@ -57,8 +62,9 @@
     
                         if (code) {
                             console.log('QRコード検出:', code.data);
-                            if (code.data === 'kenrokuen') {
+                            if (code.data === 'yurakuonsen') {
                                 updateStampStatus('stamp3'); // `stamp1`はkenrokuenのスタンプの`name`です。
+                                alert('スキャン成功!!');
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
                             }
@@ -125,36 +131,30 @@
             document.addEventListener('DOMContentLoaded', fetchStampsAndUpdateUI);
             document.getElementById('stop-camera-btn').addEventListener('click', stopCamera);
         </script> 
-        
-        
-        <p>-------------</p>
-        <h3>1300年以上の歴史を誇る温泉街で、加賀藩の歴代藩主や竹久夢二が訪れたことで知られています。9軒の温泉旅館があり、加賀料理を中心に海の幸や山の幸を楽しめます。泉質はナトリウム・カルシウム-塩化物・硫酸塩泉で、自慢の風呂を備えた宿も多いです</h3>
-        <p>地図</p>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d102635.37930509678!2d136.68523612019186!3d36.49727727169093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e3!4m0!4m5!1s0x5ff839ddacaf3b01%3A0x64f237489731e5a2!2z5rmv5raM5rip5rOJ44CB55-z5bed55yM6YeR5rKi5biC!3m2!1d36.4913437!2d136.7502906!5e0!3m2!1sja!2sjp!4v1702621573324!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-
-        <p>コメント投稿</p>
-        <div>
-            <form action="/comment" method="post">
-                <div>
-                    <label for="name">名前</label>
-                    <input type="text" name="name" id="name">
-                </div>
+        <h3 class="scription">1300年以上の歴史を誇る温泉街で、加賀藩の歴代藩主や竹久夢二が訪れたことで知られています。9軒の温泉旅館があり、加賀料理を中心に海の幸や山の幸を楽しめます。泉質はナトリウム・カルシウム-塩化物・硫酸塩泉で、自慢の風呂を備えた宿も多いです</h3>
+        <p class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12830.698540270396!2d136.7476072305131!3d36.48957385800657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff839c2ee100001%3A0xa693d0e45184c88a!2z6YeR5r6k5rmv5raM5rip5rOJIOeZvualveiNmCDliKXpgrjnpZ7mpb1LQUdVUkE!5e0!3m2!1sja!2sjp!4v1702743130759!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+        <div class="comment-wrapper">
+            <form action="/comment" method="post" class="comment-form">
                 <div>
                     <label for="comment">コメント</label>
-                    <textarea name="comment" id="comment"></textarea>
+                    <textarea name="comment" id="comment" class="form-control"></textarea>
                 </div>
                 <div>
                     <button type="submit">投稿</button>
                 </div>
             </form>
+            <ul class="comment-list">
+                {% for comment in comments %}
+                    <li class="comment">
+                        <div class="comment-header">
+                            <p>{{ comment.author.name }}</p>
+                            <p>{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
+                        </div>
+                        <div class="comment-body">
+                            <p>{{ comment.comment }}</p>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
         </div>
-        <p>コメント一覧</p>
-        {% for comment in comments %}
-            <li>
-                <p>名前：{{ comment.author.name }}</p>
-                <p>コメント：{{ comment.comment }}</p>
-                <p>投稿日：{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
-            </li>
-        {% endfor %}
-        
     </body> 
