--- a/templates/night/stamp4.html
+++ b/templates/night/stamp4.html
@@ -2,22 +2,27 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>兼六園</title>
+        <title>金沢駅・もてなしドーム</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/night3_9.css') }}">
     </head>
     <body>
         <header>
-            <div>
-                <a href="../">ホーム</a>
-                <a href="../stamp_rally_night">スタンプ</a>
+            <div class="header">
+                <div class="link_flex">
+                    <p><a href="../">ホーム</a></p>
+                    <p><a href="../stamp_rally_night">スタンプ</a></p>
+                </div>
+                <h2>押しまっし金沢</h2>
             </div>
         </header>
-        <h1>兼六園</h1>
-        <p>-------------</p>
-        <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
-        <button id="stop-camera-btn">カメラ停止</button>
-        <video id="video" style="display:none;"></video>
-        <canvas id="canvas" style="display:none;"></canvas>
+        <div class="center">
+            <h1>金沢駅・もてなしドーム</h1>
+            <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
+            <button id="stop-camera-btn">カメラ停止</button>
+            <video id="video" style="display:none;"></video>
+            <canvas id="canvas" style="display:none;"></canvas>
+        </div>
         <script>
             let videoStream;
     
@@ -57,8 +62,9 @@
     
                         if (code) {
                             console.log('QRコード検出:', code.data);
-                            if (code.data === 'kenrokuen') {
-                                updateStampStatus('stamp4'); // `stamp1`はkenrokuenのスタンプの`name`です。
+                            if (code.data === 'kanazawa-omotenasi') {
+                                updateStampStatus('stamp3'); // `stamp1`はkenrokuenのスタンプの`name`です。
+                                alert('スキャン成功!!');
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
                             }
@@ -125,37 +131,30 @@
             document.addEventListener('DOMContentLoaded', fetchStampsAndUpdateUI);
             document.getElementById('stop-camera-btn').addEventListener('click', stopCamera);
         </script> 
-        
-        
-        
-        
-        <p>-------------</p>
-        <p>地図</p>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.6675647453562!2d136.66007657529306!3d36.56212777231593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff83383f9b25905%3A0x970a7b3df003f2e4!2z5YW85YWt5ZyS!5e0!3m2!1sja!2sjp!4v1700196815906!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-
-        <p>コメント投稿</p>
-        <div>
-            <form action="/comment" method="post">
-                <div>
-                    <label for="name">名前</label>
-                    <input type="text" name="name" id="name">
-                </div>
+        <h3 class="scription">雨や雪が多い金沢の特徴を考慮し、「駅を降りた人に傘を差し出すおもてなしの心」をコンセプトに持つ建物です。幾何学模様のガラスの天井が訪れた人を優しく迎え、鼓門は荘厳な雰囲気で、金沢の伝統芸能である能楽の鼓をイメージしています。</h3>
+        <p class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.007200685299!2d136.64817140000002!3d36.578044299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8334203bb8605%3A0x5d5df6011ebba7ea!2z6YeR5rKi6aeF!5e0!3m2!1sja!2sjp!4v1702743203064!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+        <div class="comment-wrapper">
+            <form action="/comment" method="post" class="comment-form">
                 <div>
                     <label for="comment">コメント</label>
-                    <textarea name="comment" id="comment"></textarea>
+                    <textarea name="comment" id="comment" class="form-control"></textarea>
                 </div>
                 <div>
                     <button type="submit">投稿</button>
                 </div>
             </form>
+            <ul class="comment-list">
+                {% for comment in comments %}
+                    <li class="comment">
+                        <div class="comment-header">
+                            <p>{{ comment.author.name }}</p>
+                            <p>{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
+                        </div>
+                        <div class="comment-body">
+                            <p>{{ comment.comment }}</p>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
         </div>
-        <p>コメント一覧</p>
-        {% for comment in comments %}
-            <li>
-                <p>名前：{{ comment.author.name }}</p>
-                <p>コメント：{{ comment.comment }}</p>
-                <p>投稿日：{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
-            </li>
-        {% endfor %}
-        
     </body> 
