--- a/templates/night/stamp8.html
+++ b/templates/night/stamp8.html
@@ -62,7 +62,7 @@
         
                         if (code) {
                             console.log('QRコード検出:', code.data);
-                            if (code.data === 'kenrokuen') {
+                            if (code.data === 'Nishichayagai') {
                                 updateStampStatus('stamp8', 'night'); // 時間帯を'noon'に指定
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
